Fixed H1 alignment on mobile, added description meta

--- a/public/css/kynx.css
+++ b/public/css/kynx.css
@@ -1,3 +1,6 @@
+.container {
+  clear: both;
+}
 @media (min-width: 38em) {
   .content {
     font-size: 15px;
